fixup! fix: make sure IE11 is wrapping our #form-row - used in #toggle-button group and #radio group

--- a/packages/dnb-ui-lib/src/components/form-row/style/_form-row.scss
+++ b/packages/dnb-ui-lib/src/components/form-row/style/_form-row.scss
@@ -91,6 +91,11 @@
           }
         }
 
+        // IE fix
+        @media all and (-ms-high-contrast: none) {
+          margin-top: 0;
+        }
+
         // if mobile
         @media (max-width: 40em) {
           // use important, sice we want to overwrite the inline style "marginTop" set by "setLabelOffset"
